--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <table border="1px" width="60%" align="center">
     <tr><td><p>    </p> 
     <p align="center">  <img src="logo.png" hspace="50" align="texttop">asdasd</p>
+        <p align="right"> <align="texttop">kup u nas najlepszy sprzęt</p>
         <br>
         
         
